# game-console

./: .flake8  .gitignore  README.md
hw/hdl/: defines.sv
hw/hdl/board/: board.sv  defs.sv  mem.sv
hw/hdl/cpu/: cpu.sv
hw/hdl/test/: test_arty_a7_35t_simple_ili9341_parallel_8bit.cpp  test_arty_a7_35t_simple_ili9341_parallel_8bit.sv  test_arty_a7_35t_vpu_ili9341_parallel_8bit.cpp  test_arty_a7_35t_vpu_ili9341_parallel_8bit.sv  test_top.sv  test_vga.sv  top.sv
hw/hdl/vpu/: bram_tdp_rf_rf.sv  vpu.sv  vpu_bg.sv  vpu_core.sv  vpu_sp.sv  vram.sv  vram1.sv  vram2.sv
hw/rtl/test/: test_arty_a7_35t_vpu_ili9341_parallel_8bit.sv
hw/rtl/vpu/: vpu.sv  vpu_core.sv
hw/spec/: memorymap.h  memorymap.mmapd
hw/spec/cpu/: instruction.py  register.py
sw/dev/c/: README.md
sw/dev/c/lib/nkx/: CMakeLists.txt
sw/dev/c/lib/nkx/include/: memorymap.h
sw/dev/c/lib/nkx/include/nkx/hw/: nkx_hw.h
sw/dev/c/lib/nkx/include/nkx/mw/: nkx_mw.h
sw/dev/c/lib/nkx/include/nkx/std/: stdlib.h
sw/dev/c/lib/nkx/include/nkx/sw/: nkx_sw.h
sw/dev/c/lib/nkx/src/hw/: nkx_hw.cpp
sw/dev/c/lib/nkx/src/mw/: nkx_mw.cpp  nkx_mw_audio.cpp  nkx_mw_video.cpp
sw/dev/c/lib/nkx/src/std/: malloc.cpp
sw/dev/c/lib/nkx/src/sw/: nkx_sw.cpp  nkx_sw_audio.cpp  nkx_sw_input.cpp  nkx_sw_video.cpp
sw/dev/tool/: memo.txt
sw/emulator/include/: apu.h  board.h  common.h  cpu.h  cpuisa.h  debugger.h  dma.h  elf.h  emulator.h  gui.h  instruction.h  intrrctrl.h  io.h  memory.h  memorymap.h  ppu.h  processor.h  register.h  sram.h  timer.h  vpu.h
sw/emulator/src/: apu.cpp  board.cpp  cpu.cpp  cpuisaRV32.cpp  (+19 more)
(+166 files in other folders)
